Fix timeout modal being hidden behind Argyle

--- a/app/app/assets/stylesheets/cbv.scss
+++ b/app/app/assets/stylesheets/cbv.scss
@@ -263,3 +263,9 @@ input#invitation_link{
     background-color: color('gray-cool-10');
   }
 }
+
+#session-timeout-modal.is-visible {
+  // This is one additional 9 beyond Argyle's modal z-index to make sure
+  // the timeout modal is always visible if displayed
+  z-index: 9999999999;
+}
